@@ -84,10 +84,10 @@ public class ResizeFilter extends Filter {
 	 */
 	public void setWidthFactor(double factor) {
 		source = null; // forces reinitialization
-		Double prev = new Double(widthFactor);
+		Double prev = Double.valueOf(widthFactor);
 		widthFactor = Math.min(Math.abs(factor), 10);
 		widthFactor = Math.max(widthFactor, 0.01);
-		firePropertyChange("width", prev, new Double(widthFactor)); //$NON-NLS-1$
+		firePropertyChange("width", prev, Double.valueOf(widthFactor)); //$NON-NLS-1$
 	}
 
 	/**
@@ -97,10 +97,10 @@ public class ResizeFilter extends Filter {
 	 */
 	public void setHeightFactor(double factor) {
 		source = null; // forces reinitialization
-		Double prev = new Double(heightFactor);
+		Double prev = Double.valueOf(heightFactor);
 		heightFactor = Math.min(Math.abs(factor), 10);
 		heightFactor = Math.max(heightFactor, 0.01);
-		firePropertyChange("height", prev, new Double(heightFactor)); //$NON-NLS-1$
+		firePropertyChange("height", prev, Double.valueOf(heightFactor)); //$NON-NLS-1$
 	}
 
 	/**
