@@ -183,8 +183,9 @@ public class DataToolStatsTable extends JTable {
 		if (min == Double.MAX_VALUE) {
 			min = Double.NaN;
 		}
-		return new Object[] { new Double(max), new Double(min), new Double(mean), new Double(sd),
-				new Double(sd / Math.sqrt(count)), Integer.valueOf(count) };
+		return new Object[] { Double.valueOf(max), Double.valueOf(min), 
+				Double.valueOf(mean), Double.valueOf(sd),
+				Double.valueOf(sd / Math.sqrt(count)), Integer.valueOf(count) };
 	}
 
 	/**
